--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "classnames": "^2.5.1",
     "immer": "^10.0.3",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-datepicker": "^4.25.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.0.4",
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-datepicker": "^4.19.5",
     "@types/react-dom": "^18.2.17",
     "@types/react-redux": "^7.1.33",
